All_Component_DX/force-app/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Service is an activity performed during service delivery. For example, a service provider for modems may list installation, configuration, troubleshooting, onsite repair etc. as various services. Service definition is used in Service contracts to define the coverage for a customer.</description>
    <label>Available Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>