All_Component_DX/force-app/main/default/objects/Service__c/fields/Qualifying_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualifying Criteria</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipName>Available_Services</relationshipName>
    <type>Lookup</type>
</CustomField>