All_Component_DX/force-app/main/default/objects/Service__c/listViews/All_Available_Services.listView-meta.xml
<ListView>
    <fullName>All_Available_Services</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Tracked_On__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Available Services</label>
    <language>en_US</language>
</ListView>